--- a/website/src/Components/header.css
+++ b/website/src/Components/header.css
@@ -2,12 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .header {
     height: 65px;
     /* border: 1px solid red; */
     width: 100%;
+    background-color: rgb(250, 249, 248);
 }
 
 .header-top {
@@ -54,11 +56,13 @@
     position: absolute;
     left: 44%;
     right: 50%;
+    overflow: hidden;
 }
 
 .hnm-image img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .head-r {
@@ -81,12 +85,14 @@
     color: #533237;
     margin-right: 4px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .user {
     /* border: 1px solid red; */
     height: 10px;
     margin-right: 3px;
+    cursor: pointer;
 }
 
 .favourite {
@@ -149,9 +155,11 @@
     font-size: 6px;
     padding-bottom: 2.3px;
     padding-left: 4px;
+    background-color: rgb(250, 249, 248);
 }
 
 .search {
     border-bottom: 1px solid #533237;
     font-size: 10px;
+    background-color: rgb(250, 249, 248);
 }
