--- a/website/src/Components/header.css
+++ b/website/src/Components/header.css
@@ -6,9 +6,9 @@
 }
 
 .header {
-    height: 65px;
-    /* border: 1px solid red; */
     width: 100%;
+    height: 65px;
+    border: 1px solid red;
     background-color: rgb(250, 249, 248);
 }
 
@@ -67,7 +67,7 @@
 
 .head-r {
     width: 30%;
-    height: 20%;
+    height: 22%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
