--- a/website/src/Components/hm.css
+++ b/website/src/Components/hm.css
@@ -260,136 +260,140 @@
 }
 
 /* signin css */
-.Active,
-.Inactive {
-    width: 50px;
+#screen {
+    width: 100%;
+    height: 540px;
+    border: 1px solid rgba(128, 128, 128, 0.178);
+    background-color: rgba(128, 128, 128, 0.178);
 }
 
-#Signin {
-    border: none;
-    background-color: transparent;
-}
-
-.Active+.pop {
-
-    width: 100vw;
-    height: 100vh;
-    background-image: linear-gradient(to left, rgb(0, 0, 0, 0.5) 50%, rgb(0, 0, 0, 0.5) 50%);
-    position: absolute;
-    inset: 0;
+#body {
+    width: 34%;
     margin: auto;
-    z-index: 6;
-    display: block;
+    background-color: #FAF9F8;
+    height: 75%;
+    margin-top: 30px;
+    border: 1px solid rgba(128, 128, 128, 0.178);
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+#semi-body {
+    width: 87%;
+    height: 250px;
+    /* border: 1px solid red; */
+    margin: auto;
+    margin-top: 4%;
+}
+
+.top {
+    width: 100%;
+    height: 18px;
+    /* border: 1px solid green; */
+    display: flex;
+    justify-content: space-between;
+}
+
+.top>h2 {
+    font-size: 10px;
+    letter-spacing: 0.3px;
+    padding-left: 14px;
     overflow: hidden;
 }
 
-
-
-.Inactive+.pop {
-    /* transform: scale(0); */
-    /* visibility: hidden; */
-    display: none;
-
+.xmark {
+    font-size: 16px;
+    overflow: hidden;
 }
 
-.pop {
-    padding: 0% 25%;
-
-}
-
-.pop-content {
-    width: 600px;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    /* border: 1px solid red; */
-    background-color: white;
-    position: absolute;
-    top: 10%;
-    left: 25%;
-
-    /* transform: translate(50%,50%); */
-    z-index: 10;
-}
-
-
-#Email-label,
-#Pass-label {
-    padding-top: 20px;
-    margin-left: 20px;
-}
-
-#Email,
-#Password {
-    min-width: 450px;
-    height: 40px;
-    margin-left: 20px;
-
-}
-
-.rememberMe {
-    width: 90%;
-    text-decoration: underline;
-    margin-top: 10px;
-    justify-content: space-between;
-    font-size: 13px;
-    margin-left: 20px;
-}
-
-.rememberMe>input {
-    width: 20px;
+.top-p {
+    width: 100%;
     height: 20px;
+    /* border: 1px solid black; */
+    font-size: 5px;
+    font-weight: 500;
+    padding-top: 1px;
 }
 
-.end {
-    position: absolute;
-    top: 5px;
-    right: 5px;
+#fieldset {
+    /* border: 1px solid blue; */
+    height: 137px;
+    text-align: left;
+    overflow: hidden;
 }
 
-.submit {
+#fieldset>label {
+    font-size: 5.5px;
+    font-weight: 500;
+    overflow: hidden;
+}
+
+#fieldset>label>span {
+    color: red;
+}
+
+#fieldset>input {
     width: 100%;
-    height: 40px;
-    margin-left: 30px;
-    color: rgb(250, 250, 250);
-    background-color: rgb(0, 0, 0);
-    border: none;
+    height: 20px;
     outline: none;
-    margin-top: 30px;
+    border: 0.5px solid rgba(128, 128, 128, 0.33);
+    /* text-align-last: right; */
+    padding-left: 2px;
+    font-size: 5px;
 }
 
-.Member {
-    width: 100%;
-    height: 40px;
-    margin-left: 30px;
-    color: rgb(0, 0, 0);
-    background-color: rgb(252, 252, 252);
-    /* border: none; */
-    border: 1px solid black;
-    outline: none;
-    margin-top: 30px;
+::placeholder {
+    color: black;
+    text-align-last: right;
+    font-size: 5.5px;
 }
 
-.M-info {
+#forgotPass {
     width: 100%;
+    height: 20px;
+    /* border: 1px solid black; */
     display: flex;
-    justify-content: center;
-    padding-right: 15px;
-    margin-top: 15px;
+    justify-content: space-between;
+    font-size: 5.5px;
+    font-weight: 400;
+    padding-top: 1px;
 }
 
-.signIn-heading {
-    text-align: center;
-    font-size: 14px;
-    width: 90%;
-    margin: auto;
+#forgotPass>div {
+    display: flex;
 }
 
-.pop-box {
+.checkbox {
+    width: 10px;
+    height: 10px;
+}
+
+.sign-in {
     width: 100%;
-    height: 100%;
-    background-color: black;
+    height: 20px;
+    border: none;
+    color: white;
+    font-size: 6px;
+    background-color: rgba(0, 0, 0, 0.872);
+    font-weight: 700;
+    letter-spacing: 0.5px;
+}
+
+.sign-up {
+    width: 100%;
+    height: 20px;
+    border: 0.5px solid black;
+    color: rgba(0, 0, 0, 0.872);
+    font-size: 6px;
+    margin-top: 3px;
+    font-weight: 600;
+}
+
+.last {
+    font-size: 5.5px;
+    letter-spacing: 0.5px;
+    font-weight: 500;
+    margin-top: 8px;
 }
 
 /* homepage css */
