--- a/website/src/Components/hm.css
+++ b/website/src/Components/hm.css
@@ -345,7 +345,8 @@
 ::placeholder {
     color: black;
     text-align-last: right;
-    font-size: 5.5px;
+    font-size: 5px;
+    padding-right: 3px;
 }
 
 #forgotPass {
