--- a/website/src/Components/hm.css
+++ b/website/src/Components/hm.css
@@ -145,18 +145,17 @@
     height: 20px;
     font-size: 8px;
     /* border: 1px solid brown; */
-    margin-left: 60px;
+    margin-left: 80px;
     display: flex;
     align-items: center;
 }
 
 .f-right input {
     border: none;
+    width: 60%;
     border-bottom: 1px solid #533237;
-    width: 100%;
     font-size: 6px;
     padding-bottom: 2.3px;
-    padding-left: 4px;
     background-color: rgb(250, 249, 248);
 }
 
@@ -272,7 +271,7 @@
     margin: auto;
     background-color: #FAF9F8;
     height: 75%;
-    margin-top: 30px;
+    margin-top: 20px;
     border: 1px solid rgba(128, 128, 128, 0.178);
     overflow-x: hidden;
     overflow-y: auto;
@@ -534,252 +533,237 @@
 }
 
 #mainscreen {
+    width: 34%;
+    height: 400px;
     border: 1px solid white;
-    width: 33%;
-    height: 690px;
+    box-shadow: #e4e4e4;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 10px;
     overflow-y: auto;
+    overflow: hidden;
     background-color: #faf9f8;
+    position: sticky;
 }
 
 #inscreen {
     /* border: 1px solid blue; */
     width: 87%;
-    height: auto;
+    height: 390px;
     margin: auto;
     background-color: #faf9f8;
+    position: sticky;
 }
 
 #firstline {
     /* border: 1px solid red; */
-    height: 50px;
-    margin-top: 5px;
+    width: 100%;
+    height: 19px;
+    margin-top: 3px;
+    display: flex;
+    justify-content: space-between;
 }
 
 #firstline h2 {
     /* border: 1px solid red; */
     width: fit-content;
-    margin-top: 22px;
-    margin-left: 27px;
-    line-height: 28px;
-    font-size: 24px;
-    font-weight: 640;
+    margin-left: 13px;
+    font-size: 10px;
+    font-weight: 600;
     font-family: "HM Sans Latin SemiBold";
 }
 
-#cross {
-    /* border: 1px solid red; */
-    margin-top: -45px;
-    width: fit-content;
-    height: fit-content;
-    margin-left: 94%;
+.icon {
+    font-size: 16px;
+    overflow: hidden;
 }
 
-#secline :nth-child(1) {
-    letter-spacing: 0;
-    line-height: 14px;
-    margin-top: 16px;
-    margin-bottom: 32px;
-    /* border: 1px solid red; */
-    font-size: 13px;
-    font-weight: 500;
-    font-family: "HM Sans Regular";
-}
-
-#mainline {
-    /* border: 1px solid red; */
-    color: black;
-    margin-top: 50px;
-    width: fit-content;
-    height: fit-content;
-    font-size: 13px;
-    margin-left: -8px;
-    font-family: "HM Sans Regular";
-}
-
-#star {
-    color: rgb(214, 0, 28);
-    width: fit-content;
-    height: fit-content;
-    margin-top: -18px;
-    margin-left: 43px;
-    font-family: "HM Sans Latin SemiBold";
-    font-weight: bold;
-}
-
-#in1 :nth-child(1) {
-    width: 98%;
-    height: 42px;
-}
-
-#in1 {
-    margin-top: 3px;
-}
-
-#pass {
-    color: black;
-    margin-top: 15px;
-    width: fit-content;
-    height: fit-content;
-    font-size: 13px;
-    margin-left: -5px;
-}
-
-#star2 {
-    color: rgb(214, 0, 28);
-    width: fit-content;
-    height: fit-content;
-    margin-top: -19px;
-    margin-left: 122px;
-    font-weight: bold;
-}
-
-#show {
-    margin-top: -33px;
-    margin-left: 89%;
-    font-size: 13px;
-    font-weight: bold;
-}
-
-#uplow {
-    font-size: 13px;
-    width: fit-content;
-    color: #707070;
-}
-
-#dob {
-    color: black;
-    margin-top: -15px;
-    width: fit-content;
-    height: fit-content;
-    font-size: 13px;
-    margin-left: -7px;
-}
-
-#star3 {
-    color: rgb(214, 0, 28);
-    width: fit-content;
-    height: fit-content;
-    margin-top: -18px;
-    margin-left: 87px;
-    font-weight: bold;
-}
-
-#uplow2 {
-    font-size: 13px;
-    width: fit-content;
-    color: #707070;
-    margin-top: -15px;
-}
-
-#option {
-    border: none;
+#secline {
     width: 100%;
-    height: 50px;
-    background-color: white;
-    margin-top: -15px;
+    height: 20px;
+    /* border: 1px solid green; */
+    font-size: 5.3px;
+    font-weight: 500;
+    overflow: hidden;
+    padding-left: 5px;
 }
 
 #downline {
-    margin-top: 10px;
+    margin-top: 5px;
     border: 1px solid #faf9f8;
     height: fit-content;
     font-family: "HM Sans Regular";
 }
 
+#mainline {
+    width: 23px;
+    height: 12px;
+    /* border: 1px solid red; */
+    color: black;
+    display: flex;
+    font-size: 6px;
+    font-family: "HM Sans Regular";
+    overflow: hidden;
+}
+
+#star {
+    color: rgb(214, 0, 28);
+    width: 25px;
+    height: 20px;
+    font-family: "HM Sans Latin SemiBold";
+    font-weight: bold;
+}
+
+#in1 :nth-child(1) {
+    width: 100%;
+    height: 20px;
+    outline: none;
+    border: 0.5px solid rgba(128, 128, 128, 0.33);
+    /* text-align-last: right; */
+    padding-left: 2px;
+    font-size: 5px;
+}
+
+#in1 {
+    margin-top: 1px;
+    overflow: hidden;
+}
+
+#pass {
+    width: 57px;
+    height: 12px;
+    /* border: 1px solid red; */
+    color: black;
+    margin-top: 10px;
+    display: flex;
+    font-size: 6px;
+    font-family: "HM Sans Regular";
+    overflow: hidden;
+}
+
+#star2 {
+    color: rgb(214, 0, 28);
+    height: 20px;
+    font-family: "HM Sans Latin SemiBold";
+    font-weight: bold;
+}
+
+#uplow {
+    font-size: 5.5px;
+    width: fit-content;
+    color: #707070;
+}
+
+#dob {
+    width: 42px;
+    height: 12px;
+    /* border: 1px solid red; */
+    color: black;
+    display: flex;
+    font-size: 6px;
+    font-family: "HM Sans Regular";
+    overflow: hidden;
+}
+
+#star3 {
+    color: rgb(214, 0, 28);
+    height: 20px;
+    font-family: "HM Sans Latin SemiBold";
+    font-weight: bold;
+}
+
+#uplow2 {
+    font-size: 5.5px;
+    width: fit-content;
+    color: #707070;
+}
+
+#option {
+    border: none;
+    width: 100%;
+    height: 25px;
+    outline: none;
+    padding-left: 2px;
+    font-size: 5px;
+}
+
 #op1 {
-    width: 95%;
+    width: 100%;
     height: 100%;
     border: none;
     font-family: "HM Sans Regular";
-    font-size: 13px;
+    font-size: 6px;
+    font-weight: 700;
 }
 
 #yes {
     /* border: 1px solid red; */
-    height: 120px;
-    margin-top: 20px;
+    height: 76px;
+    margin-top: 2px;
     display: flex;
-    font-family: "HM Sans Regular";
-}
-
-#yes1 {
-    width: fit-content;
+    overflow: hidden;
     font-family: "HM Sans Regular";
 }
 
 #checkbox {
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
+    border: #707070;
 }
 
 #yes2 {
-    font-size: 12px;
-    width: fit-content;
+    font-size: 5.5px;
+    width: 170px;
     /* border: 1px solid red; */
-    height: fit-content;
+    height: 75px;
     text-align: start;
     font-family: "HM Sans Regular";
+    padding-top: 6px;
 }
 
 #byc {
     /* border: 1px solid red; */
-    width: fit-content;
-    font-size: 11px;
-    margin-top: 12px;
+    width: 100%;
+    font-size: 4.5px;
     text-align: start;
     color: #707070;
 }
 
 #byc1 {
     text-decoration: underline;
-    font-size: 13px;
+    font-size: 6px;
 }
 
 #lasttext {
-    width: fit-content;
-    font-size: 11px;
-    margin-top: 10px;
+    width: 100%;
+    font-size: 4.5px;
+    margin-top: 5px;
     text-align: start;
     color: #707070;
 }
 
 #bm {
     width: 100%;
-    height: 50px;
-    background-color: black;
+    height: 20px;
+    border: 1px solid black;
+    background-color: #222;
     color: white;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-#bm1 {
-    width: 100%;
-    height: 50px;
-    background-color: black;
-    color: white;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    font-size: 16px;
-    box-shadow: 0 0 0 0 #000;
-    background: #222;
+    margin-top: 12px;
+    font-size: 6px;
+    font-weight: 500;
+    padding-top: 5px;
+    border: none;
+    overflow: hidden;
 }
 
 #signin {
     width: 100%;
-    height: 50px;
+    height: 20px;
     background-color: white;
-    margin-bottom: 30px;
-}
-
-#sn2 {
-    width: 100%;
-    height: 50px;
-    background-color: white;
-    font-size: 16px;
-    box-shadow: 0 0 0 0 #000;
-    background-color: transparent;
-    border: 1px solid #222;
+    font-size: 6px;
+    border: 0.5px solid #222;
+    margin-top: 5px;
+    padding-top: 4px;
     color: #222;
+    box-shadow: 0 0 0 0 #000;
+    overflow: hidden;
 }
